--- a/index.html
+++ b/index.html
@@ -285,52 +285,12 @@ Sure, it&rsquo;s nice knowing exactly what you&rsquo;re doing some days, and you
 SQLCop is a set of over 100 open-source tests for your databases. <br>
 The tests were originally maintained by George Mastros but are now managed by Redgate Software
 	</div>
-</article><article class="list__item post">
-	
-	<figure class="list__thumbnail thumbnail">
-		<a class="thumbnail__link" href="/posts/7_parallelismproblemswithsqlserver/">
-		<img class="thumbnail__image" src="/img/featured/runners.png" alt="Parallelism Problems within SQL Server">
-		</a>
-	</figure>
-	<header class="list__header">
-		<h2 class="list__title post__title">
-			<a href="/posts/7_parallelismproblemswithsqlserver/" rel="bookmark">
-			Parallelism Problems within SQL Server
-			</a>
-		</h2>
-		
-	</header>
-	<div class="content list__excerpt post__content clearfix">
-		<BR> Some of the defaults in earlier versions of SQL Server are less than ideal, particularly Cost Threshold For Parallelism (CTFP) and Max Degree Of Parallelism (MAXDOP).
-<BR> <BR>
-Sure, things have improved in later versions. For example, since SQL Server 2019 the installer now prompts you to change MAXDOP. However, its still a problem for many workloads&hellip;
-	</div>
-</article><article class="list__item post">
-	
-	<figure class="list__thumbnail thumbnail">
-		<a class="thumbnail__link" href="/posts/6_sqloptimisationwhylessismore/">
-		<img class="thumbnail__image" src="/img/featured/less_is_more3.png" alt="SQL Server Optimisation: Why Less Is More">
-		</a>
-	</figure>
-	<header class="list__header">
-		<h2 class="list__title post__title">
-			<a href="/posts/6_sqloptimisationwhylessismore/" rel="bookmark">
-			SQL Server Optimisation: Why Less Is More
-			</a>
-		</h2>
-		
-	</header>
-	<div class="content list__excerpt post__content clearfix">
-		<br>
-<p>One of the most valuable lessons I&rsquo;ve learned in performance tuning is the importance of breaking queries tasks into smaller, more manageable sections.
-Who knew? The experts were right all along when they said, &ldquo;If you&rsquo;re confused by the query, SQL probably is too&rdquo;.</p>
-	</div>
 </article>
 </main>
 
 <div class="pagination">
 	<span class="pagination__item pagination__item--current">1/2</span>
-	<a class="pagination__item pagination__item--next btn" href="/page/2/">»</a>
+	<a class="pagination__item pagination__item--next btn" href="/2/">»</a>
 </div>
 
 			</div>
